# cobol-data-structure-py

./: .editorconfig  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  mappings.json  pyproject.toml
.claude/: CLAUDE.md  claude.md
docs/: 01-DESIGN.md  01-IMPLEMENTATION_PLAN.md  08-CSV_EXPORT_PLAN.md  14-CLAUDE_MD_UPDATE_RECOMMENDATIONS.md  16-ANONYMIZATION_GAPS_ANALYSIS.md  16-ANONYMIZATION_REFINEMENTS_PLAN.md  16-FILE_NAME_ANONYMIZATION_PLAN.md  16-FILE_NAME_ANONYMIZATION_STRATEGY.md  CLI_MAIN_REFACTORING.md  CSV_EXPORT_PLAN.md  DESIGN.md  FUNNY_NAMING_SCHEMES_PLAN.md  IMPLEMENTATION_PLAN.md  PROJECT_ORGANIZATION_GAPS.md  REFACTORING_OPPORTUNITIES.md  TEST_COVERAGE_ANALYSIS.md  design-analysis.md  design_analysis.md  design_review_findings.md
prompts_for_claude_code/: 01-anonymize_cobol_code_plan.md  01-create_python_project_structure.md  02-generate_claude_md_file  02-review_design_and_plan.md  03-design_solution.md  03-fix_bug_anonymize_comments.md  03-plan_steps_to_develop_app.md  04-funny_rename_plan.md  04-review_design.md  05-review_funny_rename_plan.md  06-implement_funny_rename_plan.md  07-add_claude_md_file.md  08-convert_json_to_csv.md  09-implement_conver_json_csv.md  10-refactor_main_cli-md.md  11-review_for_refactoring_opps.md  12-implement_refactoring_opps.md  13-improve_project_structure.md  14-implement_project_org_improvement.md  15-rename_documents_in_docs.md  16-anonymize_file_names_plan.md  17-anonymize_file_names_implement.md  18-remove_tags_from_cobol.md  19-add_rule_to_add_test_after_everychange.md  20-check_non_empty_output_folder.md
src/cobol_anonymizer/: __init__.py  cli.py  config.py  exceptions.py  logging_config.py  main.py
src/cobol_anonymizer/cobol/: __init__.py  column_handler.py  copy_resolver.py  pic_parser.py  reserved_words.py
src/cobol_anonymizer/core/: __init__.py  anonymizer.py  classifier.py  literal_anonymizer.py  mapper.py  tokenizer.py  utils.py
src/cobol_anonymizer/generators/: __init__.py  comment_generator.py  name_generator.py  naming_schemes.py
src/cobol_anonymizer/output/: __init__.py  report.py  validator.py  writer.py
src/cobol_data_structure/: __init__.py  converters.py  data_holder.py  models.py  parser.py  patterns.py  preprocessor.py  warnings_log.py
tests/: __init__.py  conftest.py  test_anonymizer.py  test_classifier.py  test_cli.py  test_column_handler.py  test_comment_handler.py  test_copy_resolver.py  test_csv_export.py  test_data_holder.py  test_example.py  test_integration.py  test_literal_anonymizer.py  test_name_generator.py  test_naming_schemes.py  test_output.py  test_parser.py  test_patterns.py  test_phase1.py  test_pic_parser.py  test_reserved_words.py  test_tokenizer.py
