[project]
name = "cobol-anonymizer"
version = "1.0.0"
description = "Anonymize COBOL source code while preserving logic and structure"
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = {text = "MIT"}
authors = [
    {name = "COBOL Anonymizer Team"}
]
keywords = ["cobol", "anonymizer", "legacy", "mainframe", "anonymization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Pre-processors",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black",
    "mypy",
    "ruff",
]

[project.scripts]
cobol-anonymize = "cobol_anonymizer.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "-v",
    "--tb=short",
    "--cov=src/cobol_anonymizer",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
# Allow implicit Optional (legacy behavior for existing code)
implicit_optional = true
# Future improvements (requires fixing existing type issues):
# check_untyped_defs = true
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
# strict_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "cobol_anonymizer.cobol.pic_parser",
    "cobol_anonymizer.core.anonymizer",
    "cobol_anonymizer.core.mapper",
    "cobol_anonymizer.generators.comment_generator",
    "cobol_anonymizer.generators.name_generator",
    "cobol_anonymizer.config",
    "cobol_anonymizer.output.validator",
    "cobol_anonymizer.main",
    "cobol_anonymizer.cli",
]
# These modules have known type issues that need to be fixed
ignore_errors = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
]
